--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   equatable: ^1.2.0
   flutter_svg: ^0.18.0
   intl: ^0.16.1
+  simple_tooltip: ^0.1.16
+  geolocator:
 
 dev_dependencies:
   flutter_test:
@@ -54,8 +56,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/my.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
